inserito il titolo, la descrizione e i bottoni per download e uso in browser

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,7 +24,16 @@
                       </button>
                   </nav>
                  <section class="bottom">
+                            <h1>Il tuo posto per parlare</h1>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem eos qui aspernatur officiis accusamus quos reprehenderit laborum nobis facere, debitis, cum error commodi minus. Amet libero nobis molestiae voluptatem sapiente?</p>
                             
+                            <button class="button-white">Scarica per mac
+
+                            </button>
+                            
+                            <button class="button-black">Apri discord nel tuo browser
+
+                            </button>
 
 
                                  </section>
